--- a/css/main.css
+++ b/css/main.css
@@ -18571,7 +18571,7 @@ a.search_modal_button {
 }
 
 .footer-carousel {
-	background-color: #8073b2;
+	background-color: #06467a;
 }
 
 .footer-carousel .owl-theme .owl-nav {
